2005-10-07  Edward Hervey  <edward@fluendo.com>

	* gst/pygstminiobject.c: (pygstminiobject_register_wrapper),
	(pygstminiobject_new), (pygstminiobject_dealloc):
	Comments to better track the creation/destruction of PyGstMiniObject
	Fixed naming (gst.GstMiniObject => gst.MiniObject)
	* testsuite/python.supp:
	Updated python specific valgrind suppressions to latest version and
	added x86_64 cases
	* testsuite/gstpython.supp:
	Series of suppressions for errors/leaks not solvable within gst-python
	* testsuite/Makefile.am:
	Added gstpython.supp

2005-10-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* testsuite/Makefile.am:
	* testsuite/python.supp:
	  add valgrind checking to the testsuite

2005-10-06  Johan Dahlin  <johan@gnome.org>

	* gst/common.h:
	* gst/gstmodule.c: (init_gst):
	* gst/pygstiterator.c: (pygst_iterator_iter_next),
	(pygst_iterator_next), (pygst_iterator_push),
	(pygst_iterator_resync):
	Even more bored tonight: Implement next/resync/push. 
	Register type so we can call methods and so.
	
2005-10-06  Johan Dahlin  <johan@gnome.org>

	* codegen/argtypes.py:
	* gst/Makefile.am:
	* gst/common.h:
	* gst/gst.defs:
	* gst/gstbin.override:
	* gst/gstelement.override:
	* gst/pygstiterator.c: (pygst_iterator_dealloc),
	(pygst_iterator_iter_next), (pygst_iterator_new):
	* testsuite/test_iterator.py:
	Add GstIterator wrapping and tests.

2005-10-06  Edward Hervey  <edward@fluendo.com>

	* gst/gstpad.override:
	* gst/gststructure.override:
	* testsuite/testhelpermodule.c: (_wrap_emit_event):
	memleak fixes. Thanks valgrind :)

2005-10-06  Edward Hervey  <edward@fluendo.com>

	* gst-python.spec.in:
	Wow, that file hasn't been updated in a long long time.

	* gst/gstcaps.override: (_wrap_gst_caps_new_empty): 
	new caps should be freed on dealloc...

2005-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstcaps.override:
	  some more debugging
	* gst/gstevent.override:
	  represent using the string for the type
