@@ -21,11 +21,44 @@ import unittest
 from common import gst, TestCase
 
 class IteratorTest(TestCase):
-    # XXX: This is busted. Testsuite or iterator bindings?
-    def gcverify(self):
-        pass
-    
     # XXX: Elements
+    def testBinIterateElements(self):
+        pipeline = gst.parse_launch("fakesrc name=src ! fakesink name=sink")
+        elements = list(pipeline.elements())
+        fakesrc = pipeline.get_by_name("src")
+        fakesink = pipeline.get_by_name("sink")
+        
+        self.assertEqual(len(elements), 2)
+        self.failUnless(fakesrc in elements)
+        self.failUnless(fakesink in elements)
+
+        pipeline.remove(fakesrc)
+        elements = list(pipeline.elements())
+
+        self.assertEqual(len(elements), 1)
+        self.failUnless(not fakesrc in pipeline)
+
+        # XXX : There seems to be a problem about the GType
+        #       set in gst_bin_iterated_sorted
+
+##     def testBinIterateSorted(self):
+##         gst.info("testBinIterateSorted beginning")
+##         pipeline =  gst.parse_launch("fakesrc name=src ! fakesink name=sink")
+##         gst.info("before calling pipeline.sorted()")
+##         elements = list(pipeline.sorted())
+##         gst.info("after calling pipeline.sorted()")
+##         fakesrc = pipeline.get_by_name("src")
+##         fakesink = pipeline.get_by_name("sink")
+
+##         self.assertEqual(elements[0], fakesink)
+##         self.assertEqual(elements[1], fakesrc)
+##         gst.info("testBinIterateSorted end")
+
+    def testBinIterateSinks(self):
+        pipeline = gst.parse_launch("fakesrc name=src ! fakesink name=sink")
+        elements = list(pipeline.elements())
+        fakesrc = pipeline.get_by_name("src")
+        fakesink = pipeline.get_by_name("sink")
     
     def testIteratePadsFakeSrc(self):
         fakesrc = gst.element_factory_make('fakesrc')
